--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
     "del": "^3.0.0",
@@ -22,7 +23,13 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
-    "run-sequence": "^2.1.0"
+    "gulp-util": "^3.0.8",
+    "run-sequence": "^2.1.0",
+    "webpack": "^3.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.6.1",
+    "npm-4": "^2.1.1",
+    "pump": "^2.0.0"
+  }
 }
